<resources>
    <string name="app_name">FreeCycle</string>
    <string name="button_addListing">Add Listing</string>
    <string name="hint_listingName">Name</string>
    <string name="hint_userTextLocation">Location</string>
    <string name="hint_userEircode">Eircode</string>
    <string name="hint_listingTitle">Listing Title</string>
    <string name="hint_listingDescription">Listing Description</string>
    <string name="addListingHeader">Add a Listing</string>
    <string name="menu_addListing">Add Listing</string>
    <string name="menu_cancelListing">Cancel</string>
    <string name="all_fields_required"> All fields are required </string>
    <string name="save_listing"> Save Listing </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_listing_image">Select Listing Image</string>
    <string name="edit_image"> Edit Image </string>
    <string name="hint_listingImage">Listing Image</string>
    <string name="button_delete_listing">Delete Listing</string>
    <string name="listing_status">Item Available</string>
    <string name="toggle_textOff">Listing Inactive</string>
    <string name="toggle_textOn">Listing Active</string>
    <string name="date_picker">Date Available</string>
    <string name="login">Login</string>
    <string name="firstName"> First Name</string>
    <string name="lastName"> Last Name</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="login_button">Login</string>
    <string name="signup">Sign Up</string>
    <string name="button_location">Set Location</string>
    <string name="date_available">Date Available</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="menu_search">Search</string>
    <string name="search_box">Type search terms here</string>
    <string name="hint_listingContactNumber">Contact Number</string>
    <string name="pickup_location">Pick Up Location</string>
    <string name="listing_image">Listing Image</string>
    <string name="name_title">Name</string>
    <string name="contactNumber_title">Contact Number</string>
    <string name="listingTitle_title">Listing Title</string>
    <string name="listingDescription_title">Listing Description</string>
    <string name="dateAvailable_title">Date Available</string>
    <string name="pickupLocation_title">Pickup Location</string>
    <string name="listingImage_title">Image</string>
    <string name="itemAvailable_title">Item Availability</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="viewMap_button">View Map</string>
    <string name="edit_button">Edit</string>
    <string name="location_not_provided">Location Not Provided</string>
</resources>