<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FreeCycleActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addListingHeader"
                android:background="@color/blueMain"
                android:titleTextColor="@color/black" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/hint_listingName"
                    android:inputType="text"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/hint_userTextLocation"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="18sp" />


                <EditText
                    android:id="@+id/eircode"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/hint_userEircode"
                    android:inputType="text"
                    android:maxLength="8"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/listingTitle"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/hint_listingTitle"
                    android:inputType="text"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/listingDescription"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/hint_listingDescription"
                    android:inputType="text"
                    android:maxLength="250"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="18sp" />
                <Button
                    android:id="@+id/chooseImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/button_addImage"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <ImageView
                    android:id="@+id/ListingImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_launcher"/>

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_addListing"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/deleteListing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_delete_listing"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:backgroundTint="@color/dangerRed"
                    android:visibility="invisible"/>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>