<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FreeCycleActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addListingHeader"
                android:background="@color/blueMain"
                android:titleTextColor="@color/black" >
                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/selima"
                    android:text="@string/app_name"
                    android:textColor="#FFFFFF"
                    android:textSize="35sp"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="25dp"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Email"
                    android:hint="@string/user_email"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/user_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Email"
                    android:hint="@string/user_password"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:text="@string/login_button"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="25dp"
                    android:text="@string/signup"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="First Name"
                    android:inputType="text"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="Last Name"
                    android:inputType="text"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/newUser_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Email"
                    android:hint="@string/user_email"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/newUser_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/user_password"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:text="@string/signup"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textStyle="bold" />


            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>